# avatar-initials-py

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: test.yml
src/avatar_initials/: __init__.py  avatar.py
src/avatar_initials_py/: avatar.py  colors.py  text.py
tests/: test_avatar.py  test_colors.py  test_text.py
